--- a/packages/ide/src/index.html
+++ b/packages/ide/src/index.html
@@ -21,5 +21,7 @@
 <body>
   <app-root></app-root>
   <script src="https://sak.userreport.com/dgadelha/launcher.js" async id="userreport-launcher-script"></script>
+  <script>var $buoop = {required:{e:-4,f:-3,o:-3,s:-1,c:-3},insecure:true,unsupported:true,api:2022.10,text:"O seu navegador, {brow_name}, está numa versão muito antiga e pode não ser suportada pelo Portugol Webstudio.<p><a{up_but}>Atualize o seu navegador</a> caso a página esteja em branco ou atualize a página para esconder este alerta.</p>"};</script>
+  <script src="https://browser-update.org/update.min.js" async></script>
 </body>
 </html>
