--- a/packages/ide/src/index.html
+++ b/packages/ide/src/index.html
@@ -10,7 +10,8 @@
   <meta name="robots" content="index,follow">
   <meta property="og:title" content="Portugol Webstudio" />
   <meta property="og:description" content="IDE de código aberta para códigos em Portugol, baseado no Portugol Studio para entregar uma experiência completa." />
-  <meta property="og:url" content="https://dgadelha.github.io/Portugol-Webstudio/" />
+  <meta property="og:url" content="https://portugol.dev/" />
+  <meta name="google-adsense-account" content="ca-pub-6982662106665437">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -21,5 +22,6 @@
   <app-root></app-root>
   <script>var $buoop = {required:{e:-4,f:-3,o:-3,s:-1,c:-3},insecure:true,unsupported:true,api:2022.10,text:"O seu navegador, {brow_name}, está numa versão muito antiga e pode não ser suportada pelo Portugol Webstudio.<p><a{up_but}>Atualize o seu navegador</a> caso a página esteja em branco ou atualize a página para esconder este alerta.</p>"};</script>
   <script src="https://browser-update.org/update.min.js" async></script>
+  <script>if(/github\.io/.test(window.location.hostname)){window.location.href="https://portugol.dev"+window.location.pathname}</script>
 </body>
 </html>
