Adição de script do Google AdSense

--- a/packages/ide/src/index.html
+++ b/packages/ide/src/index.html
@@ -17,6 +17,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6982662106665437" crossorigin="anonymous"></script>
 </head>
 <body>
   <app-root></app-root>
