Incluir manifesto web para PWA

--- a/packages/ide/src/index.html
+++ b/packages/ide/src/index.html
@@ -4,6 +4,8 @@
   <base href="/">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="manifest" href="/manifest.webmanifest" />
+  <link rel="apple-touch-icon" href="/assets/icons/icon-192x192.png" />
   <title>Portugol Webstudio</title>
   <meta name="description" content="IDE de código aberta para códigos em Portugol, baseado no Portugol Studio para entregar uma experiência completa.">
   <meta name="keywords" content="tools,portugol,univali,online,webstudio,studio,código,aprender,opensource,github" />
